fix flicker on call outs

--- a/src/sass/_homepage.scss
+++ b/src/sass/_homepage.scss
@@ -262,12 +262,16 @@
         }
         &.feature-1{
           background: rgba(255,255,255,0.95);
+          box-shadow: inset 0 0 0 2px $pc-pink;
 
           &::before {
             background-image: url( '../img/side-code-1.svg' );
+            background-position: 1px -1px;
           }
           &::after {
             background-image: url( '../img/side-code-2.svg' );
+            background-position: -1px 1px;
+            box-shadow: -1px 0 0 $pc-pink;
           }
         }
         &.feature-2{
@@ -309,9 +313,12 @@
 
           &::before {
             background-image: url( '../img/side-it-3.svg' );
+            background-position: 2px -1px;
+            box-shadow: 1px 0 0 $pc-blue;
           }
           &::after {
             background-image: url( '../img/side-it-4.svg' );
+            background-position: 0 1px;
           }
         }
         &.feature-2{
